--- a/style.css
+++ b/style.css
@@ -738,11 +738,11 @@ a {
 .mid4_content > .content4_text {
   font-size: 48px;
   font-weight: 600;
-  margin: 59px 0 0 53px;
+  margin: 59px 0 0 45px;
 }
 
 .content4_slide {
-  width: 1077px;
+  width: 950px;
   height: 531px;
 }
 
@@ -752,13 +752,12 @@ a {
   height: 100%;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
 }
 
 .swiper_md4 > .swiper-wrapper {
   width: 1070px;
-  margin: 0 50px;
   box-sizing: border-box;
-  border: 1px solid blue;
 }
 
 .swiper_md4 > .swiper-wrapper > .swiper-slide {
@@ -766,13 +765,16 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid red;
 }
 
 .md4_slide_box {
-  width: 383px !important;
+  width: 383px;
   height: 370px;
   background-color: white;
+}
+
+.md4_slide_box .md4_img_box img{
+  width: 220px;
 }
 
 .swiper_md4 > .swiper-wrapper > .swiper-slide img {
@@ -781,10 +783,13 @@ a {
   object-fit: cover;
 }
 
-.swiper_md4 > .swiper-button-next, .swiper-button-prev {
+.swiper-button-next,
+.swiper-button-prev {
   position: absolute;
-  top: 35px;
-  margin-left: 100px;
+  top: 50px;
+  font-weight: bold;
+  margin-left: 40px;
+  transform: scale(.4);
 }
 
 .swiper_md4 > .swiper-button-prev {
@@ -792,7 +797,7 @@ a {
 }
 
 .swiper_md4 > .swiper-button-next {
-  left: 70px; /* '다음' 버튼 오른쪽 위치 */
+  left: 40px; /* '다음' 버튼 오른쪽 위치 */
 }
 
 .md4_color {
@@ -853,7 +858,6 @@ a {
 }
 
 .md4_text_box div:nth-child(1) {
-  border: 1px solid red;
   width: 100%;
   height: 50px;
   display: flex;
@@ -886,6 +890,7 @@ a {
 .mid_4_box2 > .mid4_content > .content4_slide {
   width: 100%;
   height: 531px;
+  position: relative;
 }
 /* 중간섹션4 끝 */
 
