--- a/style.css
+++ b/style.css
@@ -950,7 +950,6 @@ a {
 .sns_box {
   width: 100%;
   height: 576px;
-  border: 3px solid red;
 }
 
 .sns_text {
@@ -962,35 +961,36 @@ a {
 }
 
 .swiper_sns {
-  width: 100%;
-  height: 100%;
+  width: 1920px;
   margin-bottom: 50px;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .swiper_sns > .swiper-wrapper {
-  width: auto;
-  display: flex;
-  border: 3px solid green;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .swiper_sns > .swiper-wrapper > .swiper-slide {
   width: 320px;
   height: 320px;
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #fff;  
 }
 
 .swiper_sns > .swiper-wrapper >  .swiper-slide img {
   display: block;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
-  width: 320px;
-  height: 320px;
 }
+
+.swiper-slide-active,
+.swiper-slide-active + .swiper-slide,
+.swiper-slide-active + .swiper-slide + .swiper-slide,
+.swiper-slide-active + .swiper-slide + .swiper-slide + .swiper-slide {opacity:1}
 /* 인스타그램 끝 */
 
 /* footer시작 */
